[package]
name = "i1"
version = "0.1.0"
edition = "2021"

[dependencies]
reedline-repl-rs = "1.0.6"
memmap2 = "0.7.1"
indexmap = "2.0.0"
range-set-blaze = "0.1.6"
metro = "0.1.1"
index_list = "0.2.7"
roaring = "0.10.1"

[dependencies.base64ct]
version = "1.6.0"
features = [ "alloc" ]

[dependencies.clap]
version = "4.3.8"
features = [ "string" ]

[dependencies.rkyv]
version = "0.7.42"
features = [
  "alloc",
  "archive_be",
# "bitvec",
# "size_64",
  "tinyvec",
  "uuid",
  "validation",
]

[dependencies.tinyvec]
version = "1.6.0"
features = [
  "alloc",
]

[dependencies.uuid]
version = "1.3.4"
features = [
  "v7",
  "js",
  "std",
  "fast-rng",
  "macro-diagnostics"
]
